Various things. Mainly CSS designing and PDF generation of Printable Work Orders

--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -7,7 +7,7 @@
     paginator:     the paginator that renders the pagination tags inside
 -%>
 <%= paginator.render do -%>
-  <nav class='pagination'>
+  <div class='pagination'>
     <%= current_page > 1 ? prev_link_tag : prev_span_tag %>
     <% each_page do |page| -%>
       <% if page.current? -%>
@@ -25,5 +25,5 @@
       <% end -%>
     <% end -%>
     <%= num_pages > current_page ? next_link_tag : next_span_tag %>
-  </nav>
+  </div>
 <% end -%>
