--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -3,7 +3,7 @@
   <div class="module">
     <ul>
     <% if current_user.client == true %>
-        <li class="create"><%= link_to [t "workorder.t_add_new"], :controller => "work_orders", :action => "new"%></li>
+        <li class="create"><%= link_to [t "workorder.t_add_new"], "work_orders/new?client_id=#{current_user.id}"%></li>
      <% else %>
         <li class="create"><%= link_to [t "workorder.t_add_new"], users_path %></li>
     <% end %>
@@ -33,6 +33,6 @@
       <div id="tab5" class="tabcontent"><%= render(:partial => 'work_orders/closed_wo_tab') %></div>
     </div>
   </div>
-  <div style="clear:both;"></div>
+  <div class="clear"></div>
 
 </div>
