--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,4 +1,7 @@
-<div class="center_col">
+<div id="sidebar_left">
+  <%= render 'layouts/left_sidebar_modules' %>
+</div>
+<div id="center_col">
   <div id="ddtabs1" class="basictab">
     <ul>
       <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
